fix score and icon wrapping

--- a/src/screens/animeListPage/MobileAnimeList/MobileAnimeListItem/MobileAnimeListItem.css
+++ b/src/screens/animeListPage/MobileAnimeList/MobileAnimeListItem/MobileAnimeListItem.css
@@ -56,6 +56,8 @@
 
 .mobile-list-item-info-right-side {
   font-size: 1rem;
+  display: flex;
+  gap: 3px;
 }
 
 .mobile-list-item-title {
